--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,16 +6,16 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
-    "paths" : {
-      "~/*" : ["./src/*"],
+    "paths": {
+      "~/*": ["./src/*"]
     },
     "types": ["vite-plugin-svgr/client"],
-    
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "noEmit": true,
     "jsx": "react-jsx",
 
